removing java 5 dependency
git-svn-id: http://svn.codehaus.org/geoserver/trunk@5796 ef1d6e69-97e5-0310-af46-8a06194da32a

Former-commit-id: e15fa298b417a33a4333a43e847075d593a941a2 [formerly ef8eb3ef44757100845884d55de6dacf9b80ad8a]
Former-commit-id: f0c5c62002bd343a51d4eda14396410328ddcf3e